[gd_scene load_steps=2 format=3 uid="uid://hsn82xcden2l"]

[ext_resource type="Script" uid="uid://kgeoswsls826" path="res://StartMenu.gd" id="1_d3352"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3352")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Menu" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="UI/Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Eggventurüêî
"
horizontal_alignment = 1

[node name="SettingsButton" type="Button" parent="UI/Menu"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Settings"

[node name="ControlsButton" type="Button" parent="UI/Menu"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Controls"

[node name="QuitButton" type="Button" parent="UI/Menu"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Quit"

[node name="SettingsLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 3.0
offset_right = -1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "SETTINGS

Master Volume:"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="UI"]
visible = false
offset_left = 409.0
offset_top = 170.0
offset_right = 759.0
offset_bottom = 311.0
max_value = 5.0
step = 0.1
value = 5.0

[node name="ControlsLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -115.5
offset_right = 108.5
offset_bottom = 115.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "CONTROLS

Move: ‚Üê ‚Üí ‚Üë ‚Üì or W A S D
Jump: SPACE

Collect eggs ü•ö
Avoid rocks ü™®

Every 10 eggs = faster rocks!"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="UI"]
custom_minimum_size = Vector2(0, 60)
offset_left = 427.0
offset_top = 216.0
offset_right = 727.0
offset_bottom = 276.0
text = "Play"

[connection signal="pressed" from="UI/Menu/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="UI/Menu/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="UI/Menu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="UI/PlayButton" to="." method="_on_play_button_pressed"]
